--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<table cellspacing="20">
 		<tr>
-			<td><img src="/images/iyappan.png" alt="Alt text for image"></td>
+			<td><img src="iyappan.png" alt="Alt text for image"></td>
 			<td>
 				<h1>Iyappan Sriram</h1>
 				<a href="https://www.linkedin.com/in/iyappan-sriram-a35889198/">LinkedIn</a>
