--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Iyappan's personal site</title>
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 	<table cellspacing="20">
 		<tr>
-			<td><img src="iyappan.png" alt="Alt text for image"></td>
+			<td><img src="images/iyappan.png" alt="Alt text for image"></td>
 			<td>
 				<h1>Iyappan Sriram</h1>
 				<a href="https://www.linkedin.com/in/iyappan-sriram-a35889198/">LinkedIn</a>
