updated, made it a bit less ugly. still ugly tho

--- a/index.html
+++ b/index.html
@@ -37,9 +37,76 @@
 		a valuable asset to any team.
 	</p>
 	<hr>
-	<a href="skills.html">
+	<section id="skills">
 		<h3>Skills</h3>
-	</a>
+    <table cellpadding="10px">
+        <tr>
+            <td valign="top">
+                Languages and Frameworks
+                <ul>
+                    <li>C++</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>C#</li>
+                    <li>C</li>
+                    <li>Dart</li>
+                    <li>Kotlin</li>
+                    <li>SQL</li>
+                    <li>GLSL</li>
+                    <li>Flutter</li>
+                    <li>SDL</li>
+                    <li>OpenGL</li>
+                    <li>DirectX/Direct3D</li>
+                    <li>MongoDB</li>
+                    <li>Flask</li>
+                    <li>Selenium</li>
+                </ul>
+            </td>
+            <td valign="top">
+                Software Tools and Services
+                <ul>
+                    <li>Adobe Creative Cloud Suite</li>
+                    <li>Canva</li>
+                    <li>Blender</li>
+                    <li>Unity</li>
+                    <li>Figma</li>
+                    <li>Firebase</li>
+                    <li>Google Suite</li>
+                    <li>Microsoft Azure</li>
+                    <li>Amazon AWS</li>
+                    <li>Microsoft Office</li>
+                    <li>Search Engine Optimization</li>
+                    <li>Visual Studio</li>
+                    <li>Visual Studio Code</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td valign="top">
+                Soft Skills
+                <ul>
+                    <li>Public Speaking</li>
+                    <li>Negotiation</li>
+                    <li>Decision-making</li>
+                    <li>Communication</li>
+                    <li>Conflict Resolution</li>
+                    <li>Delegation</li>
+                </ul>
+            </td>
+            <td valign="top">
+                Technical Skills
+                <ul>
+                    <li>Competitive Programming</li>
+                    <li>Reasoning</li>
+                    <li>Solution Analysis</li>
+                    <li>Optimization</li>
+                    <li>Problem Solving</li>
+                    <li>Fast Typing(120WPM)</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+	</section>
 	<hr>
 	<a href="projects.html">
 		<h3>Projects</h3>
